k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testlibertyapp
  name: testlibertyapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: testlibertyapp
  template:
    metadata:
      annotations:
        version: v1.0
      labels:
        app: testlibertyapp
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/testlibertyapp:latest
          imagePullPolicy: Always
          name: testlibertyapp
          readinessProbe:
            httpGet:
              path: /TestServletWebProject/TestServlet
              port: 9443
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - containerPort: 9080
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
            - containerPort: 9043
              protocol: TCP
