k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testlibertyapp
  name: testlibertyapp
spec:
  ports:
    - name: port-9080
      port: 9080
      targetPort: 9080
      protocol: TCP
    - name: port-9443
      port: 9443
      targetPort: 9443
      protocol: TCP
  selector:
    app: testlibertyapp
